--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -2,7 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#888888"
+    android:background="#4A4A4A"
+    android:fontFamily="@font/amaranth"
     android:gravity="left"
     android:padding="5dip"
     android:textColor="#FFFFFF"
